[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/LevelBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/images/PlainClose1-Background.png" type="Texture" id=2]
[ext_resource path="res://assets/images/SmallBox1.png" type="Texture" id=3]
[ext_resource path="res://assets/images/LargeBox1.png" type="Texture" id=4]
[ext_resource path="res://scenes/levels/WarehouseWingCorridor3.gd" type="Script" id=5]
[ext_resource path="res://scenes/BrownHauntedBall.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/SpawningDoor.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/WhiteSheetGhost.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/OrangeHauntedBall.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/GreenHauntedBall.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/RedHauntedBall.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/Grate.tscn" type="PackedScene" id=12]
[ext_resource path="res://resources/levels/OozeLevel.tres" type="Resource" id=13]

[node name="WarehouseWing3" instance=ExtResource( 1 )]
script = ExtResource( 5 )

[node name="Background" parent="." index="1"]
texture = ExtResource( 2 )

[node name="LargeBox1" type="Sprite" parent="Background" index="0"]
position = Vector2( -77.6873, -18.2267 )
texture = ExtResource( 4 )

[node name="LargeBox2" type="Sprite" parent="Background" index="1"]
position = Vector2( 40.6802, -17.5745 )
texture = ExtResource( 4 )

[node name="SmallBox1" type="Sprite" parent="Background" index="2"]
position = Vector2( 97.0847, -4.64478 )
texture = ExtResource( 3 )

[node name="Grate" parent="Background" index="3" instance=ExtResource( 12 )]
position = Vector2( -32.4305, -5.99296 )

[node name="StartPosition" parent="." index="8"]
position = Vector2( 114.747, 42.5595 )
rotation = 3.14159

[node name="LevelExit" parent="." index="9"]
position = Vector2( -126.7, 44.8439 )
ConnectedLevel = ExtResource( 13 )

[node name="SpawningDoor" parent="." index="10" instance=ExtResource( 7 )]
position = Vector2( -94.9344, 56.5614 )
EnemiesToSpawn = [ ExtResource( 9 ), ExtResource( 11 ) ]
SpawnTimes = [ 0.2, 0.2 ]

[node name="SpawningDoor2" parent="." index="11" instance=ExtResource( 7 )]
position = Vector2( 84.7312, 24.6209 )
EnemiesToSpawn = [ ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ) ]
SpawnTimes = [ 0.2, 0.1, 0.1 ]

[node name="SpawningDoor3" parent="." index="12" instance=ExtResource( 7 )]
position = Vector2( 85.6184, 62.5503 )
EnemiesToSpawn = [ ExtResource( 6 ), ExtResource( 6 ) ]
SpawnTimes = [ 0.2, 0.2 ]

[node name="SpawningDoor4" parent="." index="13" instance=ExtResource( 7 )]
position = Vector2( -63.6593, 26.8389 )
EnemiesToSpawn = [ ExtResource( 6 ), ExtResource( 10 ) ]
SpawnTimes = [ 0.2, 0.2 ]
